fix: allow local development CORS for registration